# vein

./: .dictate.toml  .dockerignore  .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  Gemfile  Makefile  README.md  docker-compose.yml  justfile  mise.toml  release-please-config.json  vein-test-cron.toml  vein-test.toml  vein.docker.toml  vein.example.toml
.cargo/: config.toml
.github/workflows/: docker.yml  release-please.yml  release.yml  test.yml
crates/vein-adapter/: CHANGELOG.md  Cargo.toml
crates/vein-adapter/migrations/postgres/: 20250111000001_init.sql
crates/vein-adapter/migrations/sqlite/: 20250111000001_init.sql
crates/vein-adapter/src/: cache.rs  lib.rs  storage.rs
crates/vein-adapter/src/cache/: backend_common.rs  models.rs  postgres.rs  quarantine.rs  serialization.rs  sqlite.rs  tests.rs  types.rs
crates/vein-admin/: CHANGELOG.md  Cargo.toml  config.toml
crates/vein-admin/assets/css/: terminal.css
crates/vein-admin/assets/views/: _base.html
crates/vein-admin/assets/views/_partials/: nav.html  page_header.html  quarantine_action.html
crates/vein-admin/assets/views/catalog/: detail.html  list.html
crates/vein-admin/assets/views/catalog/_partials/: dependencies.html  dependency_graph.html  link.html  metadata_section.html  sbom_section.html
crates/vein-admin/assets/views/changelog/: index.html
crates/vein-admin/assets/views/dashboard/: index.html
crates/vein-admin/assets/views/dashboard/_partials/: stats.html
crates/vein-admin/assets/views/permissions/: index.html
crates/vein-admin/assets/views/quarantine/: disabled.html  index.html
crates/vein-admin/assets/views/security/: index.html
crates/vein-admin/config/: development.yaml  production.yaml  test.yaml
crates/vein-admin/migration/: CHANGELOG.md  Cargo.toml
crates/vein-admin/migration/src/: lib.rs  m20250723_000001_create_cached_assets.rs  m20250723_000002_create_catalog_gems.rs  m20250723_000003_create_catalog_meta.rs  m20250723_000004_create_gem_metadata.rs  m20250723_000005_add_sbom_column.rs  m20250723_000006_add_native_languages_column.rs
crates/vein-admin/migrations/: 20250723000001_init.sql
crates/vein-admin/src/: app.rs  commands.rs  config.rs  controllers.rs  error.rs  main.rs  router.rs  ruby.rs  state.rs  utils.rs  views.rs
crates/vein-admin/src/commands/: index.rs  sync.rs  validate.rs
crates/vein-admin/src/controllers/: assets.rs  catalog.rs  changelog.rs  dashboard.rs  datastar.rs  health.rs  permissions.rs  quarantine.rs  security.rs
crates/vein-admin/src/initializers/: view_engine.rs
crates/vein-admin/src/views/: catalog.rs  dashboard.rs
src/: catalog.rs  config.rs  crates.rs  db.rs  gem_metadata.rs  hotcache.rs  http_cache.rs  lib.rs  main.rs  npm.rs  proxy.rs  quarantine.rs  upstream.rs  util.rs
src/bin_support/: catalog.rs  cli.rs  health.rs  init.rs  mod.rs  quarantine.rs  server.rs  setup.rs  stats.rs
src/config/: database.rs  delay_policy.rs  hotcache.rs  logging.rs  reliability.rs  server.rs  storage.rs  tests.rs  upstream.rs
src/crates/: handlers.rs  types.rs
src/gem_metadata/: analyzer.rs  binary_arch.rs  indexer.rs  parser.rs  sbom.rs  symbols.rs  tests.rs  version_req.rs
src/npm/: handlers.rs  types.rs
src/proxy/: cache.rs  compact.rs  dispatch.rs  fetch.rs  handlers.rs  quarantine.rs  response.rs  tests.rs  types.rs  utils.rs
