[workspace]
members = ["crates/vein-adapter", "crates/vein-admin", "crates/vein-admin/migration"]

[package]
name = "vein"
version = "0.4.0"
edition = "2024"
authors = ["Abdelkader Boudih <oss@seuros.com>"]
description = "A fast, intelligent RubyGems proxy/mirror server written in Rust"
license = "AGPL-3.0-only"
repository = "https://github.com/contriboss/vein"
homepage = "https://github.com/contriboss/vein"
readme = "README.md"
keywords = ["rubygems", "proxy", "cache", "mirror", "ruby"]
categories = ["development-tools", "caching", "network-programming"]

[lib]
name = "vein"
path = "src/lib.rs"

[[bin]]
name = "vein"
path = "src/main.rs"

[features]
default = ["tls", "postgres"]
tls = ["rama/rustls", "vein-adapter/tls"]
postgres = ["vein-adapter/postgres"]
android = []

[dependencies]
# Rama network framework (conditional TLS via feature)
rama = { version = "0.3.0-alpha.4", features = ["http-full", "tcp", "opentelemetry"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Database (features controlled by workspace features)
sqlx = { version = "0.8.2", features = ["sqlite", "chrono"] }

# Serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "0.9"
toml = "0.9"

# File handling and hashing
tokio-util = { version = "0.7.17", features = ["io"] }
sha2 = "0.10.8"
bytes = "1.11.0"
futures-util = "0.3.31"

# Version parsing for RubyGems
semver = "1.0"
num_cpus = "1.16.0"
hex = "0.4.3"
flate2 = "1.0.32"
tar = "0.4.41"
cyclonedx-bom = "0.8.0"

# Tree-sitter for Ruby code analysis
tree-sitter = "0.26.3"
tree-sitter-ruby = "0.23.1"

# Error handling
anyhow = "1.0.95"
thiserror = "2.0.9"

# CLI
clap = { version = "4.5.53", features = ["derive"] }

# Path handling
path-clean = "1.0.1"

# Utilities
once_cell = "1.20.2"
parking_lot = "0.12.3"
percent-encoding = "2.3"
rand = "0.9"

# Scheduling
tokio-cron-scheduler = "0.15.1"

# State machines
state-machines = { version = "0.7.0", features = ["typestate"] }
breaker-machines = "0.7.2"
chrono-machines = "0.3.0"

# Time handling
chrono = { version = "0.4.38", features = ["serde"] }

vein-adapter = { version = "0.3.0", path = "crates/vein-adapter", default-features = false }

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3.14.0"

# Android-specific dependencies with bundled SQLite
[target.'cfg(target_os = "android")'.dependencies]
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "chrono"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"   # Smaller binary, faster panics, backtraces via unwind tables (Rust 1.92.0+)
strip = true      # Strip symbols for smaller binary
