[workspace]
members = ["crates/vein-adapter", "crates/vein-admin"]
resolver = "3"

[package]
name = "vein"
version = "0.5.0"
edition = "2024"
rust-version = "1.95"
authors = ["Abdelkader Boudih <oss@seuros.com>"]
description = "A fast, intelligent multi-ecosystem package proxy/cache"
license = "AGPL-3.0-only"
repository = "https://github.com/contriboss/vein"
homepage = "https://github.com/contriboss/vein"
readme = "README.md"
keywords = ["rubygems", "crates", "npm", "proxy", "cache"]
categories = ["development-tools", "caching", "network-programming"]

[lib]
name = "vein"
path = "src/lib.rs"

[[bin]]
name = "vein"
path = "src/main.rs"

[features]
default = ["tls", "sqlite"]
tls = ["rama/rustls", "vein-adapter/tls"]
sqlite = ["vein-adapter/sqlite"]
postgres = ["vein-adapter/postgres"]
android = []
inspect = []

[dependencies]
# Rama network framework (conditional TLS via feature)
rama = { version = "0.3.0-alpha.4", features = ["http-full", "tcp", "opentelemetry"] }

# Async runtime
tokio = { version = "1.52.3", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
toml = "1.1.2"

# File handling and hashing
sha2 = "0.11.0"

# Archive handling
num_cpus = "1.17.0"
hex = "0.4.3"
flate2 = "1.1.9"
tar = "0.4.46"
cyclonedx-bom = "0.8.1"

# Error handling
anyhow = "1.0.102"

# CLI
clap = { version = "4.6.1", features = ["derive"] }

# Utilities
parking_lot = "0.12.5"
percent-encoding = "2.3"
rand = "0.10.1"

# Scheduling
tokio-cron-scheduler = "0.15.1"

# State machines
state-machines = { version = "0.20.0", features = ["typestate"] }
breaker-machines = "0.13.0"
chrono-machines = "0.3.2"

# Time handling
chrono = { version = "0.4.45", features = ["serde"] }

vein-adapter = { version = "0.5.0", path = "crates/vein-adapter", default-features = false }

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"   # Smaller binary, faster panics, backtraces via unwind tables (Rust 1.95.0+)
strip = true      # Strip symbols for smaller binary
