[package]
name = "vein-adapter"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["Abdelkader Boudih <oss@seuros.com>"]
description = "Shared storage adapters for Vein services"
repository = "https://github.com/contriboss/vein"
homepage = "https://github.com/contriboss/vein"
keywords = ["rubygems", "storage", "adapter"]
categories = ["database"]

[features]
default = ["sqlite", "tls"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
tls = ["sqlx/runtime-tokio-rustls"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread", "sync"] }
tracing.workspace = true

[dev-dependencies]
tempfile = "3.14.0"
