[package]
name = "vein-adapter"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["Abdelkader Boudih <oss@seuros.com>"]
description = "Shared storage adapters for Vein services"
repository = "https://github.com/contriboss/vein"
homepage = "https://github.com/contriboss/vein"
keywords = ["rubygems", "storage", "adapter"]
categories = ["database"]

[features]
default = ["sqlite", "tls"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
tls = ["sqlx/runtime-tokio-rustls"]

[dependencies]
anyhow = "1.0.102"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "chrono", "migrate"] }
tokio = { version = "1.50.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
semver = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.27.0"
