[package]
name = "vein-adapter"
version = "0.4.0"
edition = "2024"
rust-version = "1.97"
license = "AGPL-3.0-only"
authors = ["Abdelkader Boudih <oss@seuros.com>"]
description = "Shared storage adapters for Vein services"
repository = "https://github.com/contriboss/vein"
homepage = "https://github.com/contriboss/vein"
keywords = ["storage", "cache", "adapter"]
categories = ["database"]

[features]
default = ["sqlite", "tls"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
tls = ["sqlx/tls-rustls-aws-lc-rs"]

[dependencies]
anyhow = "1.0.102"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "chrono", "migrate"] }
tokio = { version = "1.52.3", features = ["fs", "macros", "rt-multi-thread", "sync"] }
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
semver = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.27.0"
