[package]
name = "vein-admin"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["Abdelkader Boudih <oss@seuros.com>"]
description = "Admin web interface for Vein RubyGems proxy server"
repository = "https://github.com/contriboss/vein"
homepage = "https://github.com/contriboss/vein"
keywords = ["rubygems", "admin", "web"]
categories = ["development-tools", "web-programming"]

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = { version = "4.6.0", features = ["derive"] }
hex = "0.4"
rama = { version = "0.3.0-alpha.4", default-features = false, features = ["http-full", "rustls"] }
sha2 = "0.10"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tera = "1"
toml = "1.0.7"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
urlencoding = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.41"
vein = { version = "0.4.0", path = "../.." }
vein-adapter = { version = "0.3.0", path = "../vein-adapter" }

[dev-dependencies]
http-body-util = "0.1"
