[package]
name = "vein-admin"
version = "0.3.0"
edition = "2024"
rust-version = "1.95"
license = "AGPL-3.0-only"
authors = ["Abdelkader Boudih <oss@seuros.com>"]
description = "Admin web interface for the Vein multi-ecosystem package proxy"
repository = "https://github.com/contriboss/vein"
homepage = "https://github.com/contriboss/vein"
keywords = ["admin", "proxy", "cache"]
categories = ["development-tools", "web-programming"]

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4"
rama = { version = "0.3.0-alpha.4", default-features = false, features = ["http-full", "rustls"] }
sha2 = "0.11.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite"] }
tera = "1"
toml = "1.1.2"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
urlencoding = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.44"
vein = { version = "0.4.0", path = "../.." }
vein-adapter = { version = "0.3.0", path = "../vein-adapter" }
