[package]
name = "vein-admin-migration"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["Abdelkader Boudih <oss@seuros.com>"]
description = "Database migrations for Vein admin service"
repository = "https://github.com/contriboss/vein"
homepage = "https://github.com/contriboss/vein"
keywords = ["rubygems", "migration", "database"]
categories = ["database"]

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"

[dependencies.sea-orm-migration]
version = "1.1.3"
features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
]
